--- a/SCEUCN-APP/app/build.gradle
+++ b/SCEUCN-APP/app/build.gradle
@@ -1,4 +1,19 @@
+plugins {
+    id 'com.zeroc.gradle.ice-builder.slice' version '1.4.7' apply false
+}
+
 apply plugin: 'com.android.application'
+apply plugin: 'com.zeroc.gradle.ice-builder.slice'
+
+
+slice {
+    java {
+        //files = [file("../slice/Printer.ice"), file("../slice/Model.ice")]
+        //args = "--debug"
+        logger.lifecycle("File: ${files}")
+    }
+}
+
 
 android {
     compileSdkVersion 28
@@ -25,4 +40,26 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+
+
+    // Zero ICE
+    implementation 'com.zeroc:ice:3.7.2'
+
+    // Simple Logging Facade 4 Java
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+
+    // Logback
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
+
+    // Lombok!
+    compileOnly 'org.projectlombok:lombok:1.18.6'
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+
+    // Apache Commons Lang
+    implementation 'org.apache.commons:commons-lang3:3.8.1'
+
+    // ZonedTimeDate (Java 8 in Java 7)
+    implementation "org.threeten:threetenbp:1.3.8"
+
 }
