--- a/SCEUCN-APP/build.gradle
+++ b/SCEUCN-APP/build.gradle
@@ -4,10 +4,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0-alpha04'
+        classpath "gradle.plugin.com.zeroc.gradle.ice-builder:slice:1.4.7"
+        classpath 'com.android.tools.build:gradle:3.4.0'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
