--- a/SCEUCN-SERVER/SCEUCN-SERVER.csproj
+++ b/SCEUCN-SERVER/SCEUCN-SERVER.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="2.2.4" />
+    <PackageReference Include="zeroc.ice.net" Version="3.7.2" />
   </ItemGroup>
 
 </Project>
