--- a/SCEUCN-APP/app/build.gradle
+++ b/SCEUCN-APP/app/build.gradle
@@ -68,4 +68,8 @@ dependencies {
     // ZonedTimeDate (Java 8 in Java 7)
     implementation "org.threeten:threetenbp:1.3.8"
 
+    // Butterknife (https://github.com/JakeWharton/butterknife/issues/1413)
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
 }
