--- a/SCEUCN-APP/build.gradle
+++ b/SCEUCN-APP/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     }
     dependencies {
         classpath "gradle.plugin.com.zeroc.gradle.ice-builder:slice:1.4.7"
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.android.tools.build:gradle:3.5.0-beta02'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
