Added: Ice nodejs libraries.

--- a/SCEUCN-SERVERjs/package.json
+++ b/SCEUCN-SERVERjs/package.json
@@ -31,5 +31,8 @@
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.4.5"
+  },
+  "dependencies": {
+    "ice": "^3.7.2"
   }
 }
