--- a/SCEUCN-SERVERj/build.gradle
+++ b/SCEUCN-SERVERj/build.gradle
@@ -55,7 +55,7 @@ dependencies {
 }
 
 // Define the main class for the application
-mainClassName = 'cl.ucn.disc.pdis.sceucn.App'
+mainClassName = 'cl.ucn.disc.pdis.sceucn.ServerApp'
 
 // The jar config
 jar {
