--- a/SCEUCN-APP/app/build.gradle
+++ b/SCEUCN-APP/app/build.gradle
@@ -74,4 +74,8 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
+    // Room DB
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+
 }
