Fixed Aplicacion Web.

--- a/SCEUCN-WEB/Properties/launchSettings.json
+++ b/SCEUCN-WEB/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:47304",
-      "sslPort": 44373
+      "applicationUrl": "http://localhost:19977",
+      "sslPort": 44363
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SCEUCN_RAZOR": {
+    "SCEUCN_WEB": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
