Implemented mostrar listado de vehiculos (Web).

--- a/SCEUCN-WEB/SCEUCN-WEB.csproj
+++ b/SCEUCN-WEB/SCEUCN-WEB.csproj
@@ -8,8 +8,10 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App"/>
+    <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="zeroc.ice.net" Version="3.7.2" />
   </ItemGroup>
 
 </Project>
