--- a/SCEUCN-SERVER/.gitignore
+++ b/SCEUCN-SERVER/.gitignore
@@ -224,3 +224,6 @@ project.lock.json
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
 /IceModel
+
+# Model generated from Ice
+Model.cs
