--- a/SCEUCN-SERVER/SCEUCN-SERVER.csproj
+++ b/SCEUCN-SERVER/SCEUCN-SERVER.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="2.2.4" />
+    <PackageReference Include="GenFu" Version="1.5.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="3.0.0-preview6.19304.10" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0-preview6.19304.6" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.0.0-preview6.19304.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="zeroc.ice.net" Version="3.7.2" />
   </ItemGroup>
 
