Refactor: Model from server.
- Added run.bat to copy code files from server.

--- a/SCEUCN-WEB/.gitignore
+++ b/SCEUCN-WEB/.gitignore
@@ -223,4 +223,10 @@ project.lock.json
 #####
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
-/IceModel
+
+# The Ice Model
+ZeroIce.cs
+
+# Model
+Model/*.cs
+Controller/ModelConverter.cs
