--- a/SCEUCN-APP/app/build.gradle
+++ b/SCEUCN-APP/app/build.gradle
@@ -7,7 +7,7 @@ slice {
         // Compilar todos los archivos Ice que esten en este directorio.
         //srcDir = "../slice/"
 
-        files = [file("../../Model.ice")]
+        files = [file("../../ZeroIce.ice")]
         //args = "--debug"
         logger.lifecycle("File: ${files}")
     }
