--- a/SCEUCN-SERVER/SCEUCN-SERVER.csproj
+++ b/SCEUCN-SERVER/SCEUCN-SERVER.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="GenFu" Version="1.5.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="3.0.0-preview6.19304.10" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview6.19304.6" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0-preview6.19304.6" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.0.0-preview6.19304.6" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
