--- a/SCEUCN-APP/app/src/main/AndroidManifest.xml
+++ b/SCEUCN-APP/app/src/main/AndroidManifest.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cl.ucn.disc.pdis.sceucn">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="cl.ucn.disc.pdis.sce.app">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".IceApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Primary.Base.Light">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.Primary.Base.Light"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
