--- a/SCEUCN-APP/gradle.properties
+++ b/SCEUCN-APP/gradle.properties
@@ -1,17 +1,27 @@
-# Project-wide Gradle settings.
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
+# Increase the build VMs heap size. Default is 512m.
+org.gradle.jvmargs=-Xmx1g
+org.gradle.caching=false
+org.gradle.configureondemand=true
+
+# Use R8 in full mode instead of ProGuard compatibility mode.
+android.enableR8.fullMode=true
+
+# Enable rudimentary R class namespacing where each library only contains
+# references to the resources it declares instead of declarations plus all
+# transitive dependency references.
+android.namespacedRClass=true
+
+# The AndroidX thing
 android.enableJetifier=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx1536m
+
+# Detect obsoletes api
+android.debug.obsoleteApi=true
+android.enableSeparateAnnotationProcessing=true
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-android.jetifier.blacklist=butterknife-compiler
+# android.jetifier.blacklist=butterknife-compiler
